--- a/src/about.pug
+++ b/src/about.pug
@@ -16,7 +16,7 @@ block content
           br
           | onderwijs
         p Wij zijn Manja en Madelon, twee bevlogen onderwijs-professionals met een missie: Scholen helpen groeien in kennis, motivatie en meesterschap. Met onze praktijkervaring én actuele onderwijskundige inzichten bouwen we samen met scholen aan structuur, vakmanschap en een stevige basis die zorgt voor duurzame ontwikkeling én kansengelijkheid.
-      img(src="images/about-page-header.jpeg" alt="Groei in onderwijs" width="557" height="380").page-header__image
+      img(src="images/about-page-header.jpg" alt="Groei in onderwijs." width="557" height="380").page-header__image
 
   section.section-mission
     .container
@@ -93,8 +93,8 @@ block content
           {
             title: 'Madelon Boot',
             name: 'Madelon',
-            img: 'images/madelon.jpeg',
-            imgHover: 'images/madelon-hover.jpeg',
+            img: 'images/madelon.jpg',
+            imgHover: 'images/madelon-hover.jpg',
             content: `
               <p>Ik ben Madelon, een energieke leider met een scherpe blik en een groot hart voor onderwijs. Met jarenlange ervaring als schoolleider in diverse contexten, heb ik geleerd hoe je beweging creëert in teams en ruimte maakt voor duurzame ontwikkeling. Ik geloof in onderwijs dat recht doet aan iedere leerling, en dat professionals in hun kracht zet. Onderwijs dat echt werkt, of het nu gaat om een fusie, het ontwikkelen van zomerscholen, of het begeleiden van kwaliteitstrajecten.</p>
               <p>Wat mij drijft? Samen leren en bouwen aan goed onderwijs voor alle kinderen. Mijn passie voor gelijke kansen zorgt ervoor dat ik altijd op zoek ben naar manieren om barrières te doorbreken en onderwijs toegankelijk te maken voor iedereen, ongeacht achtergrond of omstandigheden. </p>
@@ -115,8 +115,8 @@ block content
           {
             title: 'Manja Dobbe',
             name: 'Manja',
-            img: 'images/manja.jpeg',
-            imgHover: 'images/manja-hover.jpeg',
+            img: 'images/manja.jpg',
+            imgHover: 'images/manja-hover.jpg',
             content: `
               <p>Ik ben Manja – mensgericht leider met lef, visie en volle energie. Na jaren als schoolleider en bestuurlijk projectleider weet ik hoe je beweging krijgt in een team én in een organisatie. Ik geloof in onderwijs waarin professionals tot bloei komen en kinderen écht leren – met richting, ruimte en betekenis. Ik werk het liefst in scholen die het verschil willen maken voor hun leerlingen, zeker daar waar de uitdagingen groot zijn.</p>
               <p>Wat mij drijft? De kracht van verbinding. Ik zie snel waar de energie zit, geef mensen vertrouwen en weet met daadkracht en warmte een professionele cultuur te bouwen. Vanuit ervaring én nieuwsgierigheid combineer ik stevige leiderschapskwaliteiten met oog voor ontwikkeling, zowel in het grote geheel als op individueel niveau. Of het nu gaat om teamcoaching, onderwijskwaliteit of interim-schoolleiderschap: ik werk altijd met hart, hoofd én humor.</p>
@@ -143,7 +143,7 @@ block content
   //-       [
   //-         {
   //-           title: 'Madelon Boot',
-  //-           img: 'images/madelon-circle.jpeg',
+  //-           img: 'images/madelon-circle.jpg',
   //-           name: 'Madelon',
   //-           content: `
   //-             <p>Ik ben Madelon, een energieke leider met een scherpe blik en een groot hart voor onderwijs. Met jarenlange ervaring als schoolleider in diverse contexten, heb ik geleerd hoe je beweging creëert in teams en ruimte maakt voor duurzame ontwikkeling. Ik geloof in onderwijs dat recht doet aan iedere leerling, en dat professionals in hun kracht zet. Onderwijs dat echt werkt, of het nu gaat om een fusie, het ontwikkelen van zomerscholen, of het begeleiden van kwaliteitstrajecten.</p>
@@ -162,7 +162,7 @@ block content
   //-         },
   //-         {
   //-           title: 'Manja Dobbe',
-  //-           img: 'images/manja-circle.jpeg',
+  //-           img: 'images/manja-circle.jpg',
   //-           name: 'Manja',
   //-           content: `
   //-             <p>Ik ben Manja – mensgericht leider met lef, visie en volle energie. Na jaren als schoolleider en bestuurlijk projectleider weet ik hoe je beweging krijgt in een team én in een organisatie. Ik geloof in onderwijs waarin professionals tot bloei komen en kinderen écht leren – met richting, ruimte en betekenis. Ik werk het liefst in scholen die het verschil willen maken voor hun leerlingen, zeker daar waar de uitdagingen groot zijn.</p>
