--- a/src/interim.pug
+++ b/src/interim.pug
@@ -15,7 +15,7 @@ block content
             br
             | coaching
         p Soms heb je als school of team net even iets extra’s nodig: iemand die tijdelijk meedraait, structuur brengt of professionele begeleiding biedt. Onze mensen stappen in waar het nodig is. Of het nu gaat om leiderschap, teamontwikkeling of persoonlijke groei: wij staan naast je, denken mee en zetten beweging in gang. Tijdelijk aanwezig, blijvend van betekenis.
-      img(src="images/interim-page-header.jpeg" alt="Interim en coaching" width="557" height="380").page-header__image
+      img(src="images/interim-page-header.jpg" alt="Interim en coaching" width="557" height="380").page-header__image
 
   section.section-mission
     .container
