--- a/src/scss/components/contact-block.scss
+++ b/src/scss/components/contact-block.scss
@@ -5,6 +5,11 @@
 
   @include desktop {
     padding: 54px 0;
+    max-width: 1100px;
+  }
+
+  @include desktop-l {
+    padding: 54px 60px;
     max-width: 1920px;
   }
 }
@@ -23,13 +28,11 @@
 }
 
 .contact-block.contact-block--growth {
-
   @include desktop-l {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
-
 
 .contact-block__item {
   display: flex;
@@ -51,44 +54,38 @@
     transform: scaleY(1) rotate(10deg);
     transform-origin: center center;
     color: $color-primary;
+
+    @media (min-width: 1880px) {
+      transform: scaleY(1) rotate(0deg);
+    }
   }
 
   img {
     width: 42px;
     height: 42px;
     margin-top: 0;
-  }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    flex-direction: row;
-
-    img {
+    @media (min-width: 1200px) and (max-width: 1880px) {
       width: 70px;
       height: 70px;
       margin-top: 10px;
     }
+
+    @media (min-width: 1880px) {
+      width: 70px;
+      height: 70px;
+      margin-top: 10px;
+    }
+  }
+
+  @media (min-width: 1200px) and (max-width: 1880px) {
+    flex-direction: row;
   }
 
   @media (min-width: 1880px) {
     flex-direction: row;
     height: fit-content;
     width: fit-content;
-
-    img {
-      width: 70px;
-      height: 70px;
-      margin-top: 10px;
-    }
-
-    .svg-wrapper {
-      position: absolute;
-      overflow: hidden;
-    }
-
-    svg {
-      transform: scaleY(1) rotate(0deg);
-      transform-origin: center center;
-    }
   }
 }
 
@@ -98,6 +95,18 @@
 
   img {
     margin-top: 0;
+
+    @media (min-width: 1200px) and (max-width: 1880px) {
+      width: 78px;
+      height: 79px;
+      margin-top: 10px;
+    }
+
+    @media (min-width: 1880px) {
+      width: 78px;
+      height: 79px;
+      margin-top: 15px;
+    }
   }
 
   .svg-wrapper {
@@ -106,6 +115,19 @@
     overflow: hidden;
     left: -8px;
     top: 45px;
+
+    @media (min-width: 1200px) and (max-width: 1880px) {
+      width: 160px;
+      height: 48px;
+      bottom: 65px;
+      left: 120px;
+    }
+
+    @media (min-width: 1880px) {
+      width: 309px;
+      height: 58px;
+      left: 120px;
+    }
   }
 
   svg {
@@ -114,26 +136,17 @@
     transform: scaleY(1) rotate(10deg);
     transform-origin: center center;
     color: $color-primary;
-  }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    img {
-      width: 78px;
-      height: 79px;
-      margin-top: 10px;
-    }
-
-    .svg-wrapper {
+    @media (min-width: 1200px) and (max-width: 1880px) {
       width: 160px;
       height: 48px;
-      overflow: hidden;
-      bottom: 65px;
-      left: 120px;
     }
 
-    svg {
-      width: 160px;
-      height: 48px;
+    @media (min-width: 1880px) {
+      width: 309px;
+      height: 58px;
+      transform: none;
+      margin-bottom: 0;
     }
   }
 
@@ -141,27 +154,7 @@
     height: fit-content;
     width: fit-content;
     top: 13px;
-    left: 248px;
-
-    img {
-      width: 78px;
-      height: 79px;
-      margin-top: 15px;
-    }
-
-    .svg-wrapper {
-      width: 309px;
-      height: 58px;
-      overflow: hidden;
-      left: 120px;
-    }
-
-    svg {
-      width: 309px;
-      height: 58px;
-      transform: none;
-      margin-bottom: 0;
-    }
+    left: 180px;
   }
 }
 
@@ -175,6 +168,19 @@
     height: 44px;
     margin-left: 40%;
     margin-bottom: 20px;
+
+    @media (min-width: 1200px) and (max-width: 1880px) {
+      width: 86px;
+      height: 76px;
+      margin-top: 10px;
+    }
+
+    @media (min-width: 1880px) {
+      margin-left: 0;
+      margin-bottom: 0;
+      width: 86px;
+      height: 76px;
+    }
   }
 
   .svg-wrapper {
@@ -183,6 +189,21 @@
     overflow: hidden;
     bottom: 65px;
     right: 2px;
+
+    @media (min-width: 1200px) and (max-width: 1880px) {
+      width: 160px;
+      height: 48px;
+      bottom: 65px;
+      right: 130px;
+    }
+
+    @media (min-width: 1880px) {
+      width: 309px;
+      height: 58px;
+      right: 50px;
+      top: 20px;
+      position: relative;
+    }
   }
 
   svg {
@@ -190,55 +211,22 @@
     height: 45px;
     transform: scaleY(-1) rotate(-15deg);
     transform-origin: center center;
-  }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    img {
-      width: 86px;
-      height: 76px;
-      margin-top: 10px;
-    }
-
-    .svg-wrapper {
+    @media (min-width: 1200px) and (max-width: 1880px) {
       width: 160px;
       height: 48px;
-      overflow: hidden;
-      bottom: 65px;
-      right: 130px;
     }
 
-    svg {
-      width: 160px;
-      height: 48px;
+    @media (min-width: 1880px) {
+      width: 309px;
+      height: 58px;
+      transform: none;
     }
   }
 
   @media (min-width: 1880px) {
     top: 13px;
-    right: 240px;
-
-    img {
-      margin-left: 0;
-      margin-bottom: 0;
-      width: 86px;
-      height: 76px;
-    }
-
-    .svg-wrapper {
-      width: 309px;
-      height: 58px;
-      overflow: hidden;
-      position: relative;
-      right: 50px;
-      top: 20px;
-    }
-
-    svg {
-      width: 309px;
-      height: 58px;
-      transform: none;
-    }
-
+    right: 160px;
   }
 }
 
@@ -317,6 +305,14 @@ a.contact-block__phone {
 
   svg {
     display: none;
+
+    @media (min-width: 1880px) {
+      margin-left: 8px;
+      color: $color-orange;
+      width: 13px;
+      height: 13px;
+      display: block;
+    }
   }
 
   @media (min-width: 1200px) and (max-width: 1880px) {
@@ -328,14 +324,6 @@ a.contact-block__phone {
     font-size: 20px;
     width: fit-content;
     justify-content: flex-start;
-
-    svg {
-      margin-left: 8px;
-      color: $color-orange;
-      width: 13px;
-      height: 13px;
-      display: block;
-    }
   }
 }
 
