--- a/src/scss/components/offer-block.scss
+++ b/src/scss/components/offer-block.scss
@@ -1,10 +1,12 @@
 .offer-block {
   >p {
     margin-bottom: 40px;
+    max-width: 910px;
 
     @include desktop {
+      font-size: 18px;
       margin-top: 0;
-      margin-bottom: 72px;
+      margin-bottom: 50px;
     }
   }
 
@@ -12,7 +14,8 @@
     letter-spacing: -0.8px;
 
     @include desktop {
-      margin-bottom: 23px;
+      font-size: 36px;
+      margin-bottom: 32px;
       letter-spacing: -1.3px;
     }
   }
