--- a/src/scss/pages/growth.scss
+++ b/src/scss/pages/growth.scss
@@ -110,25 +110,25 @@
 
 // growth__tabs
 
-.growth__tabs{
+.growth__tabs {
   width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
   position: relative;
 
-  &.is-active{
+  &.is-active {
     height: fit-content;
   }
 
-  @media (min-width: 1200px) and (max-width: 1400px){
-    &.is-active{
+  @media (min-width: 1200px) and (max-width: 1400px) {
+    &.is-active {
       height: 1180px;
     }
   }
 
-  @media (min-width: 1401px){
-    &.is-active{
+  @media (min-width: 1401px) {
+    &.is-active {
       height: 1030px;
     }
   }
@@ -153,7 +153,7 @@
   }
 }
 
-.growth__tabs-nav{
+.growth__tabs-nav {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -162,17 +162,17 @@
   justify-content: space-around;
   border-bottom: 2px solid $color-primary;
 
-  @media (max-width: 450px){
+  @media (max-width: 450px) {
     justify-content: space-between;
   }
 
-  @include desktop{
+  @include desktop {
     justify-content: space-between;
     border-bottom: 1px solid transparent;
   }
 }
 
-.growth__nav-item{
+.growth__nav-item {
   width: fit-content;
   height: fit-content;
   background-color: transparent;
@@ -184,8 +184,8 @@
   position: relative;
   cursor: pointer;
   transition: background-color 0.5s;
-  
-  &.is-active{
+
+  &.is-active {
     background-color: transparent;
   }
 
@@ -198,12 +198,12 @@
     height: 346px;
   }
 
-  @include laptop{
+  @include laptop {
     width: 15%;
     height: fit-content;
   }
 
-  @include desktop{
+  @include desktop {
     width: 100%;
     height: 446px;
     background-color: $color-floralwhite;
@@ -215,8 +215,8 @@
     position: relative;
     cursor: pointer;
     transition: background-color 0.5s;
-    
-    &.is-active{
+
+    &.is-active {
       background-color: $color-primary;
     }
   }
@@ -225,14 +225,15 @@
 .growth__nav-circle {
   width: 40px;
   height: 40px;
-  color: $color-primary;
+  color: #cacaca;
 
-  @include laptop{
+  @include laptop {
     width: 100%;
     height: fit-content;
+    color: $color-primary;
   }
 
-  @include desktop{
+  @include desktop {
     width: 70px;
     height: 72px;
   }
@@ -268,11 +269,11 @@
   cursor: pointer;
 }
 
-.growth__tabs-content{
+.growth__tabs-content {
   position: relative;
   width: 100%;
 
-  @include desktop{
+  @include desktop {
     position: absolute;
     width: 100%;
     top: 375px;
@@ -280,17 +281,17 @@
   }
 }
 
-.growth__content-item{
+.growth__content-item {
   display: none;
 
-  &.is-visible{
+  &.is-visible {
     padding-top: 20px;
     display: block;
     position: relative;
   }
 
-  @include desktop{
-    &.is-visible{
+  @include desktop {
+    &.is-visible {
       width: 100%;
       height: fit-content;
       background-color: $color-floralwhite;
@@ -376,11 +377,15 @@
 
   opacity: 0;
 
-  @include laptop{
+  @include laptop {
     border-left: 14px solid transparent;
     border-right: 14px solid transparent;
     border-bottom: 20px solid $color-primary;
   }
+}
+
+.growth__nav-item.is-active .growth__nav-circle {
+  color: $color-primary;
 }
 
 .growth__nav-item.is-active .growth-toggle__triangle::after {
