--- a/src/growth.pug
+++ b/src/growth.pug
@@ -29,7 +29,7 @@ block content
             |  naar jouw school
           p Elke school heeft groeikracht. Soms is die kracht al volop zichtbaar, soms ligt er nog groeipotentieel te wachten. Met begeleiding vanuit KIEM zorg je ervoor dat de bouwstenen voor groeikracht stevig verankerd zijn: Kennis, Inspirerend leiderschap, Effectieve organisatie en Meesterschap. Samen vormen deze bouwstenen de basis voor duurzaam, toekomstgericht onderwijs waarin leerlingen én professionals floreren.
           p Of je nu één bouwsteen wilt versterken of gericht aan meerdere gebieden wilt werken, bij KIEM kies je wat jouw school nodig heeft om verder te groeien. Je kunt gericht werken aan één bouwsteen, meerdere tegelijk, of stap voor stap toewerken naar een complete school met groeikracht.
-        ul.section-growth__accordion
+        ul.section-growth__accordion.accordions
           +accordion('Wat is een KIEM-school?', `
             <ul>
               <li>Actuele kennis en vakmanschap vergroten middels studiedagen en trainingen.</li>
