--- a/src/scss/components/contact-block.scss
+++ b/src/scss/components/contact-block.scss
@@ -4,12 +4,11 @@
   margin-inline: auto;
 
   @include desktop {
-    padding: 54px 0;
-    max-width: 1100px;
+    padding: 54px 60px;
+    max-width: 1200px;
   }
 
   @include desktop-l {
-    padding: 54px 60px;
     max-width: 1920px;
   }
 }
@@ -21,7 +20,7 @@
   position: relative;
   margin-inline: auto;
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     height: fit-content;
     width: 100%;
   }
@@ -55,7 +54,7 @@
     transform-origin: center center;
     color: $color-primary;
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       transform: scaleY(1) rotate(0deg);
     }
   }
@@ -65,24 +64,24 @@
     height: 42px;
     margin-top: 0;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 70px;
       height: 70px;
       margin-top: 10px;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 70px;
       height: 70px;
       margin-top: 10px;
     }
   }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
+  @media (min-width: 1200px) {
     flex-direction: row;
   }
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     flex-direction: row;
     height: fit-content;
     width: fit-content;
@@ -96,13 +95,13 @@
   img {
     margin-top: 0;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 78px;
       height: 79px;
       margin-top: 10px;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 78px;
       height: 79px;
       margin-top: 15px;
@@ -116,14 +115,14 @@
     left: -8px;
     top: 45px;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 160px;
       height: 48px;
       bottom: 65px;
       left: 120px;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 309px;
       height: 58px;
       left: 120px;
@@ -137,25 +136,30 @@
     transform-origin: center center;
     color: $color-primary;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 160px;
       height: 48px;
+      transform: none;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 309px;
       height: 58px;
-      transform: none;
       margin-bottom: 0;
     }
   }
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     height: fit-content;
     width: fit-content;
     top: 13px;
+    left: 100px;
+  }
+
+  @media (min-width: 1800px) {
     left: 180px;
   }
+
 }
 
 .contact-block__item:last-child {
@@ -169,13 +173,14 @@
     margin-left: 40%;
     margin-bottom: 20px;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 86px;
       height: 76px;
       margin-top: 10px;
+
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       margin-left: 0;
       margin-bottom: 0;
       width: 86px;
@@ -190,14 +195,14 @@
     bottom: 65px;
     right: 2px;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 160px;
       height: 48px;
       bottom: 65px;
       right: 130px;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 309px;
       height: 58px;
       right: 50px;
@@ -212,21 +217,26 @@
     transform: scaleY(-1) rotate(-15deg);
     transform-origin: center center;
 
-    @media (min-width: 1200px) and (max-width: 1880px) {
+    @media (min-width: 1200px) {
       width: 160px;
       height: 48px;
+      transform: none;
     }
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       width: 309px;
       height: 58px;
-      transform: none;
+
     }
   }
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     top: 13px;
-    right: 160px;
+    right: 60px;
+  }
+
+  @media (min-width: 1800px) {
+    right: 140px;
   }
 }
 
@@ -242,7 +252,7 @@
     justify-content: center;
   }
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     max-width: 550px;
     justify-content: center;
   }
@@ -263,20 +273,20 @@
     font-weight: 700;
   }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    font-size: 40px;
+  @media (min-width: 1200px) {
+    font-size: 36px;
     letter-spacing: -0.4px;
     line-height: 1.3;
     letter-spacing: -1.3px;
-    width: 460px;
+    width: 400px;
   }
 
-  @media (min-width: 1880px) {
-    width: fit-content;
+  @media (min-width: 1800px) {
     font-size: 49px;
     letter-spacing: -0.4px;
     line-height: 1.3;
     letter-spacing: -1.3px;
+    width: fit-content;
   }
 }
 
@@ -306,7 +316,7 @@ a.contact-block__phone {
   svg {
     display: none;
 
-    @media (min-width: 1880px) {
+    @media (min-width: 1600px) {
       margin-left: 8px;
       color: $color-orange;
       width: 13px;
@@ -315,12 +325,12 @@ a.contact-block__phone {
     }
   }
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
+  @media (min-width: 1200px) {
     width: 460px;
     font-size: 18px;
   }
 
-  @media (min-width: 1880px) {
+  @media (min-width: 1600px) {
     font-size: 20px;
     width: fit-content;
     justify-content: flex-start;
