--- a/src/home.pug
+++ b/src/home.pug
@@ -4,7 +4,7 @@ prepend vars
   - title = 'Homepage'
 
 append vars
- - pageWrapperClass = 'homepage gradient-lg-top-right'
+ - pageWrapperClass = 'gradient-lg-top-right'
 
 block content
   section 
