--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -89,3 +89,25 @@ article ol p {
 article ol li {
   margin-top: 34px;
 }
+
+.article .article-links {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  a {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-decoration: none;
+    font-family: $font-primary;
+    font-size: 18px;
+    color: $color-text-default;
+  }
+
+  a:last-child {
+    color: $color-secondary;
+    font-weight: 700;
+    text-decoration: underline;
+  }
+}
