--- a/src/growth.pug
+++ b/src/growth.pug
@@ -8,7 +8,7 @@ append vars
 
 block content
   section.page-header.growth
-    .page-header__inner.container.container-md
+    .page-header__inner.container.container-sm
       .page-header__text
         h1
           | Ons aanbod
@@ -18,7 +18,7 @@ block content
       p.page-header__subtext Kiem staat voor groeien met kracht, inspiratie, energie en motivatie. Wij werken altijd vanuit afstemming en ieder traject is maatwerk. Wij geloven dat duurzame schoolontwikkeling begint met gerichte groei. Daarom werken wij met vier bouwstenen die samen een stevige basis vormen voor kwaliteitsverbetering in het onderwijs.
 
   section.section-growth 
-    .container
+    .container.container-md
       h2.section-growth__title.hidden.visible-desktop Breng KIEM naar jouw school
       img(src="images/growth-page-content.svg" alt="Groei in onderwijs" width="557" height="380").section-growth__img
       .section-growth__content
