--- a/src/interim.pug
+++ b/src/interim.pug
@@ -8,7 +8,7 @@ append vars
 
 block content 
   section.page-header
-    .page-header__inner.container.container-md
+    .page-header__inner.container.container-sm
       .page-header__text
         h1 
             | Interim en
@@ -18,7 +18,7 @@ block content
       img(src="images/interim-page-header.jpg" alt="Interim en coaching" width="557" height="380").page-header__image
 
   section.section-mission
-    .container
+    .container.container-sm
       +tabs(
         'Meer over onze hulp',
         'images/lamp.svg',
