--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -45,13 +45,16 @@
   @include desktop {
     width: calc(100% - 300px);
     max-width: 1120px;
-    margin-left: 40px;
     margin-right: 0;
     padding-top: 80px;
   }
 
   @include desktop-l {
-    width: calc(100% - 520px);
+    width: calc(100% - 350px);
+  }
+
+  @media (min-width: 1920px) {
+    width: calc(100% - 390px);
   }
 }
 
@@ -80,7 +83,11 @@
   }
 
   @include desktop-l {
-    width: 24%;
+    width: 28%;
+  }
+
+  @media (min-width: 1920px) {
+    width: 21%;
   }
 }
 
@@ -94,6 +101,9 @@
     width: 37%;
   }
 
+  @media (min-width: 1920px) {
+    width: 31%;
+  }
 }
 
 .footer__info-item:nth-child(2) .footer__logo {
@@ -351,11 +361,17 @@ a.footer__logo {
     height: 100%;
     width: 320px;
     margin-left: 0;
+    border-top-right-radius: 0;
   }
 
   @include desktop-l {
-    width: 640px;
+    width: 560px;
     padding: 120px;
+  }
+
+  @media (min-width: 1920px) {
+    width: 610px;
+
   }
 }
 
